welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:15: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (getDirection() == Direction.EST) {
  ^SnakeBuggle:29: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return (murAuNord && estFaceMur())
  ^